--- a/index.html
+++ b/index.html
@@ -245,6 +245,25 @@
         </div>
       </article>
 
+            <!-- Housing Price Index (NEW) -->
+      <article class="card" id="housing">
+        <h2>Housing Price Index</h2>
+        <p>
+          Explore regional housing price indexes with state filters, Top/Bottom rankings, and percentile views.
+          Single‑file dashboard optimized for GitHub Pages.
+        </p>
+        <ul>
+          <li>Large legend + search</li>
+          <li>Top/Bottom N &amp; percentiles</li>
+          <li>PNG &amp; CSV export</li>
+        </ul>
+        <div class="cta">
+          <!-- <a class="btn" href="housing/housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
+          <!-- <a class="btn" href="/housing/" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
+          <a class="btn" href="/housing/housing_r.html" aria-label="Open Housing Price Index Dashboard 1"> Open Housing Dashboard</a>
+        </div>
+      </article>
+
       <!-- Full-width explainer -->
       <aside class="explainer" id="how-to">
         <h3>How to use this hub</h3>
