--- a/housing/housing_r.html
+++ b/housing/housing_r.html
@@ -142,10 +142,8 @@ aside.panel { overflow: auto; }
 
   // Excel candidates (same folder)
   const EXCEL_CANDIDATES = [
-    new URL("./house_r.xlsx", location.href).href,
     new URL("./data.xlsx", location.href).href,
-    new URL("./6c31ca85-70e8-4f7b-a826-b01ca33f5fbd.xlsx", location.href).href,
-    "https://raw.githubusercontent.com/stberry7/stberry7.github.io/main/housing/house_r.xlsx"
+    new URL("./6c31ca85-70e8-4f7b-a826-b01ca33f5fbd.xlsx", location.href).href
   ];
 
   let seriesAll = []; // [{name,label,state,dates[],values[]}]
