--- a/index.html
+++ b/index.html
@@ -195,6 +195,23 @@
 
       <!-- World Bank -->
       <article class="card" id="weo">
+        <h2>OECD House</h2>
+        <p>
+          Compare economies worldwide: GDP (nominal/real/per‑capita), inflation, trade balance, FDI, savings, debt,
+          and hundreds of development indicators.
+        </p>
+        <ul>
+          <li>Country &amp; region filters with standard definitions</li>
+          <li>Per‑capita and growth‑rate views for fair comparisons</li>
+          <li>CSV/JSON downloads for research and teaching</li>
+        </ul>
+        <div class="cta">
+          <a class="btn" href="oecd/house/house.html" aria-label="Open weo Dashboard">Open WEO</a>
+        </div>
+      </article>
+      
+      <!-- World Bank -->
+      <!-- <article class="card" id="weo">
         <h2>World Bank Global Data</h2>
         <p>
           Compare economies worldwide: GDP (nominal/real/per‑capita), inflation, trade balance, FDI, savings, debt,
@@ -208,7 +225,7 @@
         <div class="cta">
           <a class="btn" href="weo/weo.html" aria-label="Open weo Dashboard">Open WEO</a>
         </div>
-      </article>
+      </article> -->
 
       <!-- Mortgage -->
       <article class="card" id="mortgage">
