--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <li>CSV/JSON downloads for research and teaching</li>
         </ul>
         <div class="cta">
-          <a class="btn" href="oecd/house/oecd house.html" aria-label="Open weo Dashboard">Open WEO</a>
+          <a class="btn" href="oecd/house/oecd_house.html" aria-label="Open weo Dashboard">Open WEO</a>
         </div>
       </article>
       
