--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <li>Easy export for spreadsheets and models</li>
         </ul>
         <div class="cta">
-          <a class="btn" href="fed.html" aria-label="Open FRED Dashboard">Open FRED Dashboard</a>
+          <a class="btn" href="fed/fed.html" aria-label="Open FRED Dashboard">Open FRED Dashboard</a>
         </div>
       </article>
 
